2003-10-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CANONICAL_HOST.

2003-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CHECK_CPU.

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.
	* i960ca/Makefile.am: Reflect having moved automake/.
	* i960ka/Makefile.am: Reflect having moved automake/.
	* i960rp/Makefile.am: Reflect having moved automake/.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-01-20	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge-in include/Makefile.am.
	* include/Makefile.am: Removed.
	* configure.ac: Reflect changes above.

2002-12-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Remove CPU_MODEL_SUBDIR.
	* configure.ac: Remove RTEMS_CHECK_CUSTOM_BSP(RTEMS_BSP).
	* i960ca/Makefile.am: Eliminate *_O_FILES.
	Don't include @RTEMS_BSP@.cfg.
	* i960ka/Makefile.am: Ditto.
	* i960rp/Makefile.am: Ditto.

2002-12-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CHECK_BSP_CACHE.

2002-12-02	Joel Sherrill <joel@OARcorp.com>

	* shared/soft_reset_asm.S: Removed.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* i960ca/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* i960ka/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* i960rp/Makefile.am: Use .$(OBJEXT) instead of .o.
