@@ -1,3 +1,10 @@
+2003-12-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* Makefile.am: Reformat. Use dirstamps for preinstallation.
+	* i960ca/Makefile.am: Reformat.
+	* i960ka/Makefile.am: Reformat.
+	* i960rp/Makefile.am: Reformat.
+
 2003-10-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* configure.ac: Remove RTEMS_CANONICAL_HOST.
